--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "form-data": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
