--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
-    "form-data": "^4.0.0"
+    "form-data": "^4.0.0",
+    "lru-cache": "^7.14.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
@@ -31,7 +32,7 @@
   "prettier": {
     "singleQuote": true
   },
-  "engines": { 
+  "engines": {
     "node": "16.x"
   }
 }
