--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "cheerio": "^1.0.0-rc.5",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
-    "lru-cache": "^7.14.1"
+    "lru-cache": "^7.14.1",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7",
